* (28 March 2006)

  Removed "extra credit" documentation into wiki: http://technoweenie.stikipad.com/plugins/show/Acts+as+Authenticated
  Stop validating the user's salt since they can't even fix that if they wanted to.

* (25 March 2006)

  Added account_location plugin hooks

* (20 March 2006)

  New for Rails 1.1!

  Added #assert_difference and #assert_no_difference test helpers
  Changed signup form to use #form_for

* (22 Jan 2006)

  Fixed user validations
  Fixed Migration table name

* (19 Jan 2006)

  Fixed generator erb bug [Kyle Maxwell]

* (18 Jan 2006)

  Fixed bug with password field adding validation errors [Chris Nolan]
  Added persistent login example [Chris Nolan]

* (17 Dec 2005)

  Various typos fixed.  Examples for using an activation code added [Ben Bleything]

* (6 Dec 2005)

  Add some docs to README, add install.rb script

* (20 Nov 2005)

  Redirect to signup page if no users have been created [Bousquet]

  Experimental generator for creating the users table.  Requires edge rails and does not let you set the table name:
  
    ./script/generate authenticated_migration

* (18 Nov 2005)

  Allow changing of the login model name when generating the observer [Bill Katz]

* (15 Nov 2005)

  Commented out the activate action in the controller [tobyjoe]
  fixed notifier.rb's erb variables [tobyjoe]
  removed last old instance of set_current_user [tobyjoe]
  

* (13 Nov 2005)

  fixed assert_login_required bug with :controller => '/account'
  tweak logged_in? method to check for valid current_user, not just any old id value
  comment out user activation by default
  added index template, updated login_required comments [corp]
  removed troublesome login_required class method.  use the filter instead

* (12 Nov 2005) 

  renaming generators to authentication and authentication_mailer
  store user ID in session by default